--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,6 +75,7 @@ $font-sizes: (
   7: $font-size-base * 1.25,//20 px
   8: $font-size-base * 1.125,//18 px
   9: $font-size-base,//16 px
+  10: $font-size-base*.875,//14 px
 ) !default;
 
 
@@ -99,9 +100,38 @@ $spacers: (
   12: $spacer * 1.25,   //20
   13: $spacer *7.625,   //122
   14: $spacer *6.25,   //100
-
+  15: $spacer *12.5,   //200
+  16: $spacer *1.75,   //28
 ) !default;
 
+
+// scss-docs-start position-map
+$position-values: (
+  0: 0,
+  50: 50%,
+  3:3%,
+  4:4%,
+  5:5%,
+  10:10%,
+  20:20%,
+  25:25%,
+  29:28.5%,
+  33:33%,
+  35:35%,
+  45:45%,
+  40:40%,
+  100: 100%
+) !default;
+// scss-docs-end position-map
+// scss-docs-start container-max-widths
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 900px,
+  xxl: 1197px
+) !default;
+// scss-docs-end container-max-widths
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/root";
